@@ -3,6 +3,7 @@ Pro 1.0.11
 
 Fixes:
  - Logout not working under Firefox (MODELER-507)
+ - Designer can't handle multiple login with the same account (MODELER-508)
 
 Pro 1.0.10
 ==========
